# finflow

./: README.md  functional_pipeline.ipynb  new.ipynb  pyproject.toml
finflow/src/services/backtest/: backtest.py
finflow/src/services/filters/: macd.py  mean_reversion.py  random.py  volume.py
finflow/src/services/optimizer/: hrp.py
finflow/src/services/pipeline/: pipeline.py
