[tool.poetry]
name = "finflow"
version = "0.1.0"
description = "Modular pipelines to create and backtest investment strategies"
authors = ["João Jacques <joaopedro_jh@hotmail.com>"]
license = "MIT"
packages = [
    { include = "finflow"},
    { include = "finflow/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.1.74"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"
flake8 = "^5.0.4"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
